--- a/index.html
+++ b/index.html
@@ -63,15 +63,14 @@
         import { getFirestore, collection, doc, setDoc, addDoc, onSnapshot, increment, getDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
         // 🛑 REPLACE WITH YOUR FIREBASE CONFIG FROM STEP 1
-  const firebaseConfig = {
-    apiKey: "AIzaSyCSLj634AKyrwrDE1FPcXTsePPuiiYBFKQ",
-    authDomain: "elestralcardscanner.firebaseapp.com",
-    projectId: "elestralcardscanner",
-    storageBucket: "elestralcardscanner.firebasestorage.app",
-    messagingSenderId: "50825995351",
-    appId: "1:50825995351:web:8a8abde8c256fca22cef12",
-    measurementId: "G-1WFXZWZ668"
-  };
+        const firebaseConfig = {
+            apiKey: "YOUR_API_KEY",
+            authDomain: "YOUR_PROJECT.firebaseapp.com",
+            projectId: "YOUR_PROJECT",
+            storageBucket: "YOUR_PROJECT.appspot.com",
+            messagingSenderId: "YOUR_SENDER_ID",
+            appId: "YOUR_APP_ID"
+        };
 
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
